UI for registration

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,14 @@
 <title>Homepage</title>
 </head>
 <body>
-<a href="./login.html">Login</a><br/>
-<a href="./register.html">Register</a><br/>
+<a href="login.html">Login</a><br/>
+<a href="register.html">Register</a><br/>
 
 <hr/>
+
+<h1>Sources</h1>
+
+<a href="https://github.com/alx27coursera/cybersec-capstone">GitHub repo</a>
 
 <h1>Design considerations</h1>
 
