--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,9 @@
 <title>Homepage</title>
 </head>
 <body>
+
+<h1>Coursera Cybersecurity Capstone project - Group 8</h1>
+
 <a href="login.html">Login</a><br/>
 <a href="register.html">Register</a><br/>
 
