--- a/src/main/resources/static/send.html
+++ b/src/main/resources/static/send.html
@@ -1,9 +1,16 @@
 <html>
 <head>
-<title>Homepage</title>
+<title>Send Message</title>
 </head>
 <body>
-<a href="./login.html">Login</a><br/>
-<a href="./register.html">Register</a><br/>
+<a href="./message_list.html">Message List</a><br/>
+
+<form>
+    To: <input type="text" name="recipient" value=""/><br>
+    Message:<br>
+    <textarea></textarea><br>
+    <input type="submit" value="send">
+</form>
+
 </body>
 </html>
