--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,7 +7,7 @@
 <a href="/register.html">Register</a><br/>
 
 <form action="/webapi/login" method="post">
-User ID: <input type="text" name="userId" value=""/><br/>
+User ID: <input type="text" name="username" value=""/><br/>
 Password: <input type="password" name="password" value=""/><br/>
 <input type="submit"/><br/>
 </form>
