Authentication fully implemented, changed hand-made pass hashing to bcrypt

--- a/src/main/resources/static/message_list.html
+++ b/src/main/resources/static/message_list.html
@@ -5,7 +5,7 @@
     <title>Message List</title>
 </head>
 <body>
-You are authenticated as USERNAME
+You are authenticated as ${userid} ${username}
 <hr/>
 <table style="border: solid">
     <tr>
