--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 
 <h1>Sources</h1>
 
-<a href="https://github.com/alx27coursera/cybersec-capstone">GitHub repo</a>
+<a href="https://github.com/alx27coursera/cybersec-capstone" target="_blank" title="Opens in new window">GitHub repo</a>
 
 <h1>Threat model</h1>
 
@@ -32,6 +32,7 @@
 <ul>
 <li>All communications secured by https protocol, to prevent sniffing users' credentials 
 and session hijacking.</li>
+<li>Passwords in database are hashed using <a href="https://en.wikipedia.org/wiki/Bcrypt" target="_blank" title="Opens in new window">bcrypt</a>.</li>
 </ul>
 
 </body>
