--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -8,6 +8,7 @@
 <form action="/webapi/register" method="post">
 User ID: <input type="text" name="userId" value=""/><br/>
 Password: <input type="password" name="password" value=""/><br/>
+Repeat password: <input type="password" name="password2" value=""/><br/>
 Real name: <input type="text" name="realName" value=""/><br/>
 <input type="submit"/><br/>
 </form>
