Database dump functionality

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,9 +11,10 @@
 
 <hr/>
 
-<h1>Sources</h1>
+<h1>Sources and database</h1>
 
-<a href="https://github.com/alx27coursera/cybersec-capstone" target="_blank" title="Opens in new window">GitHub repo</a>
+<a href="https://github.com/alx27coursera/cybersec-capstone" target="_blank" title="Opens in new window">GitHub repo</a><br/>
+<a href="/dbdump" target="_blank" title="Opens in new window">Database schema and content</a><br/>
 
 <h1>Threat model</h1>
 
