Password reset done (except for nice UI)

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,6 +5,7 @@
 <body>
 <a href="/index.html">Home</a><br/>
 <a href="/register.html">Register</a><br/>
+<a href="/password_reset.html">Password reset</a><br/>
 
 <form action="/webapi/login" method="post">
 User ID: <input type="text" name="username" value=""/><br/>
