--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -10,6 +10,8 @@ User ID: <input type="text" name="userId" value=""/><br/>
 Password: <input type="password" name="password" value=""/><br/>
 Repeat password: <input type="password" name="password2" value=""/><br/>
 Real name: <input type="text" name="realName" value=""/><br/>
+Secret question: <input type="text" name="secretQuestion" value=""/><br/>
+Secret answer: <input type="text" name="secretAnswer" value=""/><br/>
 <input type="submit"/><br/>
 </form>
 </body>
