--- a/src/main/resources/static/password_reset.html
+++ b/src/main/resources/static/password_reset.html
@@ -1,17 +1,89 @@
 <html>
 <head>
 <title>Login page</title>
+    <style>
+        input[type=text], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=password], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=submit] {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
+
+        div {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        ul.nav {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        li.nav {
+            float: left;
+        }
+
+        li a.nav {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a.nav:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-<a href="/index.html">Home</a><br/>
-<a href="/register.html">Register</a><br/>
+<ul class="nav">
+    <li class="nav"><a class="nav" href="/index.html">Home</a></li>
+    <li class="nav"><a class="nav" href="/register.html">Register</a></li>
+</ul><br/>
 
 <form action="/webapi/passwordReset" method="post">
-User ID: <input type="text" name="username" value=""/><br/>
+    <label for="username">User ID</label>
+    <input type="text" id="username" name="username" value=""/><br/>
 Secret question: here should be secret question from template<br/>
-Secret answer: <input type="password" name="secretAnswer" value=""/><br/>
-New password: <input type="password" name="password" value=""/><br/>
-Repeat new password: <input type="password" name="password2" value=""/><br/>
+    <label for="secretAnswer">Secret answer</label>
+    <input type="password" id="secretAnswer" name="secretAnswer" value=""/><br/>
+    <label for="password">New password</label>
+    <input type="password" id="password" name="password" value=""/><br/>
+    <label for="password2">Repeat new password</label>
+    <input type="password" id="password2" name="password2" value=""/><br/>
 <input type="submit"/><br/>
 </form>
 </body>
