--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,43 @@
 <html>
 <head>
 <title>Homepage</title>
+
+    <style>
+        ul.nav {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+        }
+
+        li.nav {
+            float: left;
+        }
+
+        li a.nav {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a.nav:hover {
+            background-color: #45a049;
+        }
+
+    </style>
+
 </head>
 <body>
 
-<h1>Coursera Cybersecurity Capstone project - Group 8</h1>
+<ul class="nav">
+    <li class="nav"><a class="nav" href="login.html">Login</a></li>
+    <li class="nav"><a class="nav" href="register.html">Register</a></li>
+</ul><br/>
 
-<a href="login.html">Login</a><br/>
-<a href="register.html">Register</a><br/>
+<h1>Coursera Cybersecurity Capstone project - Group 8</h1>
 
 <hr/>
 
