All user inputs checked and sanitized

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -75,14 +75,14 @@
 </ul><br/>
 
 <form action="/webapi/register" method="post">
+	User ID should be 4-20 characters long and should contain only letters and digits.
     <label for="userId">User ID</label>
     <input type="text" id="userId" name="userId" value=""/><br/>
+    Password should be 8-20 characters long and should contain lower case letters, upper case letters, and digits.
     <label for="password">Password</label>
     <input type="password" id="password" name="password" value=""/><br/>
     <label for="password2">Repeat password</label>
     <input type="password" id="password2" name="password2" value=""/><br/>
-    <label for="realName">Real name</label>
-    <input type="text" id="realName" name="realName" value=""/><br/>
     <label for="secretQuestion">Secret question</label>
     <input type="text" id="secretQuestion" name="secretQuestion" value=""/><br/>
     <label for="secretAnswer">Secret answer</label>
