Cleanup and error handling

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
 <ul class="nav">
     <li class="nav"><a class="nav" href="login.html">Login</a></li>
     <li class="nav"><a class="nav" href="register.html">Register</a></li>
+    <li class="nav"><a class="nav" href="/webapi/messageList">Messages</a></li>
 </ul><br/>
 
 <h1>Coursera Cybersecurity Capstone project - Group 8</h1>
