--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -21,7 +21,7 @@
     <input type="text" id="secretQuestion" name="secretQuestion" value=""/><br/>
     <label for="secretAnswer">Secret answer</label>
     <input type="text" id="secretAnswer" name="secretAnswer" value=""/><br/>
-    <input type="submit"/><br/>
+    <input type="submit" value="Register"/><br/>
 </form>
 </body>
 </html>
