--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,7 +15,7 @@
     <input type="text" id="username" name="username" value=""/><br/>
     <label for="password">Password</label>
     <input type="password" id="password" name="password" value=""/><br/>
-<input type="submit"/><br/>
+<input type="submit" value="Login"/><br/>
 </form>
 </body>
 </html>
