2-stage registration, cleanup

--- a/src/main/resources/static/password_reset.html
+++ b/src/main/resources/static/password_reset.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
-<title>Login page</title>
+<title>Password reset</title>
 </head>
 <body>
 <ul class="nav">
@@ -9,16 +9,9 @@
     <li class="nav"><a class="nav" href="/register.html">Register</a></li>
 </ul><br/>
 
-<form action="/webapi/passwordReset" method="post">
+<form action="/webapi/passwordReset2" method="post">
     <label for="username">User ID</label>
-    <input type="text" id="username" name="username" value=""/><br/>
-Secret question: here should be secret question from template<br/>
-    <label for="secretAnswer">Secret answer</label>
-    <input type="password" id="secretAnswer" name="secretAnswer" value=""/><br/>
-    <label for="password">New password</label>
-    <input type="password" id="password" name="password" value=""/><br/>
-    <label for="password2">Repeat new password</label>
-    <input type="password" id="password2" name="password2" value=""/><br/>
+    <input type="text" id="username" name="username" value="" autofocus="autofocus"/><br/>
 <input type="submit"/><br/>
 </form>
 </body>
