--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -11,7 +11,7 @@
 <form action="/webapi/register" method="post">
 	User ID should be 4-20 characters long and should contain only letters and digits.
     <label for="userId">User ID</label>
-    <input type="text" id="userId" name="userId" value=""/><br/>
+    <input type="text" id="userId" name="userId" value="" autofocus="autofocus"/><br/>
     Password should be 8-20 characters long and should contain lower case letters, upper case letters, and digits.
     <label for="password">Password</label>
     <input type="password" id="password" name="password" value=""/><br/>
