--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,7 +36,7 @@
 <ul>
 <li>All communications secured by https protocol, to prevent sniffing users' credentials 
 and session hijacking.</li>
-<li>Passwords in database are hashed using <a href="https://en.wikipedia.org/wiki/Bcrypt" target="_blank" title="Opens in new window">bcrypt</a>.</li>
+<li>Passwords in database are hashed using bcrypt.</li>
 <li>Message field in the database is encrypted with AES/CBC/PKCS5Padding.</li>
 </ul>
 
