--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -12,7 +12,7 @@
 
 <form action="/webapi/login" method="post">
     <label for="username">User ID</label>
-    <input type="text" id="username" name="username" value=""/><br/>
+    <input type="text" id="username" name="username" value="" autofocus="autofocus"/><br/>
     <label for="password">Password</label>
     <input type="password" id="password" name="password" value=""/><br/>
 <input type="submit" value="Login"/><br/>
