List of technologies added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,6 +38,7 @@
 and session hijacking.</li>
 <li>Passwords in database are hashed using bcrypt.</li>
 <li>Message field in the database is encrypted with AES/CBC/PKCS5Padding.</li>
+<li>Technologies used: Java, Spring, Thymeleaf, embedded Derby DB.</li>
 </ul>
 
 <h1>Good luck breaking it!</h1>
