Error message on unsuccessful login

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <ul class="nav">
-    <li class="nav"><a class="nav" href="login.html">Login</a></li>
+    <li class="nav"><a class="nav" href="/webapi/loginPage">Login</a></li>
     <li class="nav"><a class="nav" href="register.html">Register</a></li>
     <li class="nav"><a class="nav" href="/webapi/messageList">Messages</a></li>
 </ul><br/>
