Added a note about heroku

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,8 @@ and session hijacking.</li>
 <li>Technologies used: Java, Spring, Thymeleaf, embedded Derby DB.</li>
 </ul>
 
+<p>Please note that heroku brings the environment down if not used for a while, accordingly the database content may get lost between the sessions.</p>
+
 <h1>Good luck breaking it!</h1>
 
 </body>
