--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,7 +41,7 @@ and session hijacking.</li>
 <li>Technologies used: Java, Spring, Thymeleaf, embedded Derby DB.</li>
 </ul>
 
-<p>Please note that heroku brings the environment down if not used for a while, accordingly the database content may get lost between the sessions.</p>
+<p>Please note that heroku brings the free environment down after 30 minutes of inactivity, accordingly the database content will get lost.</p>
 
 <h1>Good luck breaking it!</h1>
 
